# fltkhs-fluid-demos

./: README.md  README.txt  Setup.hs  cabal.project  fltkhs-fluid-demos.cabal  fltkhs-fluid-examples.cabal  stack-repl.yaml  stack-windows.yaml  stack.yaml
src/: FastSlow.fl  Inactive.fl  Radio.fl  Tabs.fl  Tree.fl  TreeCallbacks.hs  Valuators.fl
