name : fltkhs-fluid-demos
version : 0.0.0.7
synopsis : Fltkhs Fluid Demos
description:
    Examples of using Fluid with FLTKHS
license : MIT
license-file : LICENSE
author : Aditya Siram
build-type: Custom
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/fltkhs-fluid-demos
category: UI,Graphics
cabal-version: >=1.20
source-repository head
  type: git
  location: http://github.com/deech/fltkhs-fluid-demos

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: True

Executable fltkhs-fluid-radio
  Main-Is: fluid-radio.hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    bytestring,
    fltkhs >= 0.5.3.0,
    text >= 0.2 && < 1.3
  default-language: Haskell2010
  default-extensions: FlexibleContexts
  ghc-Options: -threaded
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  Other-Modules: Radio
  default-extensions: TypeFamilies
  if os(windows)
   ghc-Options: -optl-mwindows
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

Executable fltkhs-fluid-tabs
  Main-Is: fluid-tabs.hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    bytestring,
    fltkhs >= 0.5.3.0,
    text >= 0.2 && < 1.3
  default-language: Haskell2010
  default-extensions: FlexibleContexts
  ghc-Options: -threaded
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  Other-Modules: Tabs
  if os(windows)
   ghc-Options: -optl-mwindows
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

Executable fltkhs-fluid-valuators
  Main-Is: fluid-valuators.hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    bytestring,
    fltkhs >= 0.5.3.0,
    text >= 0.2 && < 1.3
  default-language: Haskell2010
  default-extensions: TypeFamilies
  default-extensions: FlexibleContexts, AllowAmbiguousTypes
  ghc-Options: -threaded
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  Other-Modules: Valuators
  if os(windows)
   ghc-Options: -optl-mwindows
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

Executable fltkhs-fluid-inactive
  Main-Is: fluid-inactive.hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    bytestring,
    fltkhs >= 0.5.3.0,
    text >= 0.2 && < 1.3
  default-language: Haskell2010
  ghc-Options: -threaded
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  Other-Modules: Inactive
  if os(windows)
   ghc-Options: -optl-mwindows
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

Executable fltkhs-fluid-fast-slow
  Main-Is: fluid-fast-slow.hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    bytestring,
    fltkhs >= 0.5.3.0,
    text >= 0.2 && < 1.3
  default-language: Haskell2010
  ghc-Options: -threaded
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  Other-Modules: FastSlow
  if os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
   ghc-Options: -optl-mwindows
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

Executable fltkhs-fluid-tree
  Main-Is: fluid-tree.hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    bytestring,
    fltkhs >= 0.5.3.0,
    text >= 0.2 && < 1.3
  default-language: Haskell2010
  ghc-Options: -threaded
  if os(windows)
   ghc-Options: -optl-mwindows
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -O0
  Other-Modules:
                Tree,
                TreeCallbacks
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
